<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="data"
            type="com.assignment.openinappdashboard.model.MainActivityModelForUi" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_theme_color">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_tab_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/margin_horizontal_dashboard"
                android:paddingVertical="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_tab_bar"
                    style="@style/tv_tab_bar_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/tv_tab_bar_head" />

                <ImageView
                    android:id="@+id/iv_tab_bar"
                    style="@style/iv_tab_bar_style"
                    android:layout_width="@dimen/height_iv_tab_bar"
                    android:layout_height="@dimen/height_iv_tab_bar"
                    android:padding="6dp"
                    android:src="@drawable/ic_wrench"
                    tools:ignore="ContentDescription" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <ScrollView
                android:id="@+id/scroll_view_container"
                style="@style/sv_style"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="-18dp"
                android:scrollIndicators="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_tab_bar"
                tools:targetApi="m">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_greeting"
                        style="@style/tv_greeting_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{data.greetingString}"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        style="@style/dash_board_parent_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_user_name"
                            style="@style/tv_user_name_style"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ajay Manva" />

                        <ImageView
                            android:id="@+id/iv_greeting"
                            android:layout_width="@dimen/height_iv_greeting"
                            android:layout_height="@dimen/height_iv_greeting"
                            android:layout_gravity="center_vertical" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/ll_char_container"
                        style="@style/chart_container_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="24dp"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginHorizontal="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="0dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_chart_heading"
                                style="@style/tv_chart_head_style"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_weight="1"
                                android:text="@string/str_chart_head" />

                            <TextView
                                android:id="@+id/tv_chart_date_range"
                                style="@style/tv_chart_date_style"
                                android:text="@{data.chartDateRange}"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="end"
                                android:background="@drawable/bg_round_stroke" />
                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_marginStart="12dp"
                            android:layout_marginBottom="12dp">

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/chart"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                        </FrameLayout>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/bt_analytics"
                        style="@style/bt_view_analytics_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_analytics"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_price_boost" />

                        <TextView
                            android:id="@+id/tv_analytics"
                            style="@style/tv_bt_view_analytics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_view_analytics" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/link_list_header"
                        style="@style/link_list_header_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/bt_top_link"
                            style="@style/selected_bt_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_top_links"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/bt_recent_link"
                            style="@style/unselected_bt_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_recent_links"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/bt_top_link"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            android:id="@+id/bt_link_search"
                            style="@style/bt_search_link_style"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_search__stroke_"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_links_list"
                        style="@style/dash_board_parent_style"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginTop="28dp"
                        android:adapter="@{data.adapter}"
                        tools:listitem="@layout/link_data_item_view">

                    </androidx.recyclerview.widget.RecyclerView>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/bt_view_links"
                        style="@style/bt_view_analytics_style"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_view_links"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_link" />

                        <TextView
                            android:id="@+id/tv_view_links"
                            style="@style/tv_bt_view_analytics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_view_all_links" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/bt_contact"
                        style="@style/bt_contact_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_contact"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_whatsapp" />

                        <TextView
                            android:id="@+id/tv_contact"
                            style="@style/tv_bt_view_analytics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_contact" />
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/bt_faq"
                        style="@style/bt_faq_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_faq"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_question_mark" />

                        <TextView
                            android:id="@+id/tv_faq"
                            style="@style/tv_bt_view_analytics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_faq" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="visible"
            app:elevation="5dp"
            app:fabCradleMargin="0dp"
            app:fabCradleRoundedCornerRadius="0dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                app:elevation="0dp"
                app:itemIconSize="20dp"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_navigation_menu" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:src="@drawable/ic_add"
            android:visibility="visible"
            app:elevation="0dp"
            app:layout_anchor="@id/bottomAppBar"
            app:maxImageSize="30dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>